--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing = "20">
     <tr>
-      <td><img src="Haji.png" alt="Profile picture"></td>
+      <td><img src="haji.png" alt="Profile picture"></td>
       <td><h1>Haji Saba</h1>
       <p> <em>University Student</em></p>
       <p> <strong>Department of Mechanical Engineering </strong></p>
